dodoa driver controller, poseban screen za vozace

--- a/src/main/resources/fxml/username-layout.fxml
+++ b/src/main/resources/fxml/username-layout.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane id="j" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url(F1.png);" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Button layoutX="375.0" layoutY="174.0" mnemonicParsing="false" onAction="#openHome" text="Neka tipka" />
       <PasswordField layoutX="135.0" layoutY="174.0" promptText="Sifra" />
       <TextField layoutX="136.0" layoutY="109.0" promptText="Username" />
-      <Button fx:id="about_button" layoutX="27.0" layoutY="334.0" mnemonicParsing="false" text="About" onAction="#openAbout" />
+      <Button fx:id="about_button" layoutX="27.0" layoutY="334.0" mnemonicParsing="false" onAction="#openAbout" text="About" />
 
    </children>
 </AnchorPane>
