--- a/src/main/resources/fxml/HomePage.fxml
+++ b/src/main/resources/fxml/HomePage.fxml
@@ -24,7 +24,7 @@
       </MenuBar>
       <MenuButton layoutX="362.0" layoutY="165.0" mnemonicParsing="false" text="MenuButton">
         <items>
-          <MenuItem mnemonicParsing="false" text="Drivers" />
+          <MenuItem mnemonicParsing="false" text="Drivers" onAction="#openDriverScreen"/>
           <MenuItem mnemonicParsing="false" text="Teams" />
           <MenuItem mnemonicParsing="false" text="Tracks" />
         </items>
