--- a/src/main/resources/fxml/DriverScreen.fxml
+++ b/src/main/resources/fxml/DriverScreen.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import javafx.geometry.Insets?>
 <Pane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: GHOSTWHITE;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="263.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Drivers" textAlignment="CENTER" underline="true">
@@ -12,6 +13,15 @@
          </font>
       </Text>
       <TextField layoutX="56.0" layoutY="155.0" promptText="Driver's name" />
-      <Button layoutX="274.0" layoutY="155.0" mnemonicParsing="false" text="Search" />
+      <Button layoutX="274.0" layoutY="155.0" mnemonicParsing="false" text="Search" onAction="#searchDrivers"/>
+      <TableView layoutX="189.0" layoutY="200.0" prefHeight="200.0" prefWidth="149.0">
+        <columns>
+          <TableColumn fx:id="driversColumn" prefWidth="75.0" text="Drivers" />
+          <TableColumn fx:id="teamsColumn" prefWidth="75.0" text="Teams" />
+        </columns>
+          <padding>
+              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+          </padding>
+      </TableView>
    </children>
 </Pane>
