dodao onaction za menuitems teams i tracks

--- a/src/main/resources/fxml/HomePage.fxml
+++ b/src/main/resources/fxml/HomePage.fxml
@@ -25,8 +25,8 @@
       <MenuButton layoutX="362.0" layoutY="165.0" mnemonicParsing="false" text="MenuButton">
         <items>
           <MenuItem mnemonicParsing="false" text="Drivers" onAction="#openDriverScreen"/>
-          <MenuItem mnemonicParsing="false" text="Teams" />
-          <MenuItem mnemonicParsing="false" text="Tracks" />
+          <MenuItem mnemonicParsing="false" text="Teams" onAction="#openTeamScreen"/>
+          <MenuItem mnemonicParsing="false" text="Tracks" onAction="#openTrackScreen"/>
         </items>
       </MenuButton>
       <Text layoutX="52.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select one of the options on the right" wrappingWidth="199.77734375">
