--- a/src/main/resources/fxml/username-layout.fxml
+++ b/src/main/resources/fxml/username-layout.fxml
@@ -32,8 +32,8 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <PasswordField promptText="Password" GridPane.rowIndex="2" />
-            <TextField promptText="Username" GridPane.rowIndex="1">
+            <PasswordField promptText="Password" GridPane.rowIndex="2" fx:id="passField"/>
+            <TextField promptText="Username" GridPane.rowIndex="1" fx:id="loginField">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
