najdraza staza u driver tabeli

--- a/src/main/resources/fxml/DriverScreen.fxml
+++ b/src/main/resources/fxml/DriverScreen.fxml
@@ -14,15 +14,16 @@
       </Text>
       <TextField fx:id="searchDrivers" layoutX="56.0" layoutY="155.0" promptText="Drivers' name" />
       <Button layoutX="274.0" layoutY="155.0" mnemonicParsing="false" onAction="#searchDrivers" text="Search" />
-      <TableView layoutX="189.0" layoutY="200.0" prefHeight="200.0" prefWidth="149.0" fx:id="driversTable">
+      <TableView fx:id="driversTable" layoutX="189.0" layoutY="200.0" prefHeight="200.0" prefWidth="270.0">
         <columns>
           <TableColumn fx:id="driversColumn" prefWidth="75.0" text="name" />
           <TableColumn fx:id="ageColumn" prefWidth="75.0" text="age" />
+            <TableColumn fx:id="trackColumn" prefWidth="110.0" text="favourite track" />
         </columns>
           <padding>
               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
           </padding>
       </TableView>
-      <Button layoutX="163.0" layoutY="97.0" mnemonicParsing="false" text="Show all" onAction="#showAllDrivers" />
+      <Button layoutX="163.0" layoutY="97.0" mnemonicParsing="false" onAction="#showAllDrivers" text="Show all" />
    </children>
 </Pane>
