Track screen - sada su sve staze prikazane pri paljenju screena

--- a/src/main/resources/fxml/TrackScreen.fxml
+++ b/src/main/resources/fxml/TrackScreen.fxml
@@ -15,8 +15,8 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <ListView fx:id="categoriesList" minHeight="300.0" prefHeight="300.0" prefWidth="297.0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-      <TextField fx:id="categoryName" GridPane.columnIndex="1" />
+      <ListView fx:id="trackList" minHeight="300.0" prefHeight="300.0" prefWidth="297.0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+      <TextField fx:id="trackName" GridPane.columnIndex="1" />
       <Label text="Search track" />
       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
