--- a/src/main/resources/fxml/HomePage.fxml
+++ b/src/main/resources/fxml/HomePage.fxml
@@ -26,7 +26,7 @@
         <items>
           <MenuItem fx:id="buttonDriver" mnemonicParsing="false" text="Drivers" onAction="#openDriverScreen"/>
           <MenuItem fx:id="buttonTeam" mnemonicParsing="false" text="Teams" />
-          <MenuItem fx:id="buttonTrack" mnemonicParsing="false" text="Tracks" />
+          <MenuItem fx:id="buttonTrack" mnemonicParsing="false" text="Tracks" onAction="#openTrackScreen"/>
         </items>
       </MenuButton>
       <Text layoutX="52.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select one of the options on the right" wrappingWidth="199.77734375">
