ukoliko nema fanova - ispise da nema niko

--- a/src/main/resources/fxml/TrackFansPage.fxml
+++ b/src/main/resources/fxml/TrackFansPage.fxml
@@ -6,13 +6,13 @@
 
 <Pane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ListView layoutX="200.0" layoutY="200.0" prefHeight="200.0" prefWidth="200.0" fx:id="listOfDrivers"/>
+      <ListView fx:id="listOfDrivers" layoutX="200.0" layoutY="200.0" prefHeight="200.0" prefWidth="250.0" />
       <DialogPane contentText="Select the track you want to look up" layoutX="120.0" layoutY="65.0">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </DialogPane>
-      <Button layoutX="348.0" layoutY="119.0" mnemonicParsing="false" text="Button" onAction="#searchDrivers"/>
-      <ChoiceBox layoutX="156.0" layoutY="119.0" prefWidth="150.0" fx:id="choiceBox" />
+      <Button layoutX="348.0" layoutY="119.0" mnemonicParsing="false" onAction="#searchDrivers" text="Button" />
+      <ChoiceBox fx:id="choiceBox" layoutX="156.0" layoutY="119.0" prefWidth="150.0" />
    </children>
 </Pane>
