--- a/src/main/resources/fxml/TeamScreen.fxml
+++ b/src/main/resources/fxml/TeamScreen.fxml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.TracksScreen"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<Pane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <HBox layoutX="189.0" layoutY="246.0" prefHeight="100.0" prefWidth="200.0" />
+      <ToolBar layoutX="189.0" layoutY="14.0" prefHeight="40.0" prefWidth="200.0">
+        <items>
+          <Button mnemonicParsing="false" text="Home" />
+            <Button mnemonicParsing="false" text="About" />
+            <Button mnemonicParsing="false" text="Close App" />
+        </items>
+      </ToolBar>
+   </children>
+</Pane>
