ubacen on action u mainu za dugmic koji otvara driver screen

--- a/src/main/resources/fxml/HomePage.fxml
+++ b/src/main/resources/fxml/HomePage.fxml
@@ -25,7 +25,7 @@
       <MenuButton layoutX="362.0" layoutY="165.0" mnemonicParsing="false" text="MenuButton">
         <items>
           <MenuItem fx:id="buttonDriver" mnemonicParsing="false" text="Drivers" onAction="#openDriverScreen"/>
-          <MenuItem fx:id="buttonTeam" mnemonicParsing="false" text="Teams" />
+          <MenuItem fx:id="buttonTeam" mnemonicParsing="false" text="Teams" onAction="#openTeamScreen"/>
           <MenuItem fx:id="buttonTrack" mnemonicParsing="false" text="Tracks" onAction="#openTrackScreen"/>
         </items>
       </MenuButton>
