--- a/src/main/resources/fxml/TeamScreen.fxml
+++ b/src/main/resources/fxml/TeamScreen.fxml
@@ -15,12 +15,12 @@
       <Button layoutX="462.0" layoutY="159.0" mnemonicParsing="false" text="Find Team" />
       <TextField layoutX="240.0" layoutY="159.0" />
       <DialogPane contentText="Find this Drivers' Team" layoutX="27.0" layoutY="144.0" prefHeight="54.0" prefWidth="191.0" />
-      <TableView layoutX="100.0" layoutY="198.0" prefHeight="200.0" prefWidth="400.0">
+      <TableView layoutX="100.0" layoutY="198.0" prefHeight="200.0" prefWidth="400.0" fx:id="teamTable">
         <columns>
-          <TableColumn prefWidth="75.0" text="Team Name" />
-            <TableColumn prefWidth="96.19998168945312" text="Team Country" />
-          <TableColumn prefWidth="104.5999755859375" text="Driver 1" />
-            <TableColumn prefWidth="125.0" text="Driver 2" />
+          <TableColumn prefWidth="75.0" text="Team Name" fx:id="teamName" />
+            <TableColumn prefWidth="96.19998168945312" text="Team Country" fx:id="teamCountry"/>
+          <TableColumn prefWidth="104.5999755859375" text="Driver 1" fx:id="driver1"/>
+            <TableColumn prefWidth="125.0" text="Driver 2" fx:id="driver2" />
         </columns>
       </TableView>
    </children>
