--- a/src/main/resources/fxml/TeamScreen.fxml
+++ b/src/main/resources/fxml/TeamScreen.fxml
@@ -13,7 +13,7 @@
         </items>
       </ToolBar>
       <Button layoutX="462.0" layoutY="159.0" mnemonicParsing="false" text="Find Team" />
-      <TextField layoutX="240.0" layoutY="159.0" />
+      <TextField layoutX="240.0" layoutY="159.0" fx:id="searchTeam"/>
       <DialogPane contentText="Find this Drivers' Team" layoutX="27.0" layoutY="144.0" prefHeight="54.0" prefWidth="191.0" />
       <TableView layoutX="100.0" layoutY="198.0" prefHeight="200.0" prefWidth="400.0" fx:id="teamTable">
         <columns>
