--- a/src/main/resources/fxml/TeamScreen.fxml
+++ b/src/main/resources/fxml/TeamScreen.fxml
@@ -12,7 +12,7 @@
             <Button mnemonicParsing="false" onAction="#closeApp" text="Close App" />
         </items>
       </ToolBar>
-      <Button layoutX="462.0" layoutY="159.0" mnemonicParsing="false" text="Find Team" />
+      <Button layoutX="462.0" layoutY="159.0" mnemonicParsing="false" text="Find Team" onAction="#findHisTeam" />
       <TextField fx:id="searchTeam" layoutX="240.0" layoutY="159.0" />
       <DialogPane contentText="Find this Drivers' Team" layoutX="27.0" layoutY="144.0" prefHeight="54.0" prefWidth="191.0" />
       <TableView fx:id="teamTable" layoutX="100.0" layoutY="198.0" prefHeight="200.0" prefWidth="400.0">
