--- a/src/main/resources/fxml/addNewTeam.fxml
+++ b/src/main/resources/fxml/addNewTeam.fxml
@@ -25,6 +25,13 @@
                   <Button mnemonicParsing="false" text="Edit this Team" />
                </children>
             </VBox>
+            <ToolBar layoutX="177.0" layoutY="14.0" prefHeight="40.0" prefWidth="230.0">
+              <items>
+                <Button mnemonicParsing="false" text="Home" />
+                  <Button mnemonicParsing="false" text="Team Screen" />
+                  <Button mnemonicParsing="false" text="Close App" />
+              </items>
+            </ToolBar>
          </children>
       </Pane>
    </center>
