--- a/src/main/resources/fxml/addNewTeam.fxml
+++ b/src/main/resources/fxml/addNewTeam.fxml
@@ -13,7 +13,7 @@
             <TextField layoutX="203.0" layoutY="285.0" promptText="Team country" fx:id="teamcountry"/>
             <VBox layoutX="466.0" layoutY="118.0" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <ChoiceBox prefWidth="150.0" />
+                  <ChoiceBox prefWidth="150.0" fx:id="choiceb"/>
                   <Button mnemonicParsing="false" text="Add Team" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
@@ -22,14 +22,14 @@
                         <Insets bottom="30.0" top="30.0" />
                      </VBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" text="Edit this Team" />
+                  <Button mnemonicParsing="false" text="Edit this Team" onAction="#editThisTEam"/>
                </children>
             </VBox>
             <ToolBar layoutX="177.0" layoutY="14.0" prefHeight="40.0" prefWidth="230.0">
               <items>
-                <Button mnemonicParsing="false" text="Home" />
-                  <Button mnemonicParsing="false" text="Team Screen" />
-                  <Button mnemonicParsing="false" text="Close App" />
+                <Button mnemonicParsing="false" text="Home" onAction="#goHome"/>
+                  <Button mnemonicParsing="false" text="Team Screen" onAction="#goToTeamScreen"/>
+                  <Button mnemonicParsing="false" text="Close App" onAction="#closeApp"/>
               </items>
             </ToolBar>
             <DialogPane contentText="Here you can add or edit existing team" layoutX="160.0" layoutY="91.0" prefHeight="54.0" prefWidth="235.0" />
