--- a/src/main/resources/fxml/addNewTeam.fxml
+++ b/src/main/resources/fxml/addNewTeam.fxml
@@ -13,7 +13,7 @@
             <TextField layoutX="203.0" layoutY="285.0" promptText="Team country" fx:id="teamcountry"/>
             <VBox layoutX="466.0" layoutY="118.0" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <ChoiceBox prefWidth="150.0" fx:id="choiceb"/>
+                  <ChoiceBox prefWidth="150.0" fx:id="cb"/>
                   <Button mnemonicParsing="false" text="Add Team" textAlignment="CENTER" onAction="#addThisTeam">
                      <opaqueInsets>
                         <Insets />
