--- a/src/main/resources/fxml/addNewTeam.fxml
+++ b/src/main/resources/fxml/addNewTeam.fxml
@@ -8,13 +8,13 @@
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField layoutX="203.0" layoutY="158.0" promptText="Team id" fx:id="teamid"/>
-            <TextField layoutX="203.0" layoutY="218.0" promptText="Team Name" fx:id="teamname"/>
-            <TextField layoutX="203.0" layoutY="285.0" promptText="Team country" fx:id="teamcountry"/>
-            <VBox layoutX="466.0" layoutY="118.0" prefHeight="200.0" prefWidth="100.0">
+            <TextField fx:id="teamid" layoutX="203.0" layoutY="158.0" promptText="Team id" />
+            <TextField fx:id="teamname" layoutX="203.0" layoutY="218.0" promptText="Team Name" />
+            <TextField fx:id="teamcountry" layoutX="203.0" layoutY="285.0" promptText="Team country" />
+            <VBox layoutX="466.0" layoutY="118.0" prefHeight="200.0" prefWidth="121.0">
                <children>
-                  <ChoiceBox prefWidth="150.0" fx:id="cb"/>
-                  <Button mnemonicParsing="false" text="Add Team" textAlignment="CENTER" onAction="#addThisTeam">
+                  <ChoiceBox fx:id="cb" prefWidth="150.0" />
+                  <Button mnemonicParsing="false" onAction="#addThisTeam" text="Add Team" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -22,14 +22,19 @@
                         <Insets bottom="30.0" top="30.0" />
                      </VBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" text="Edit this Team" onAction="#editThisTeam"/>
+                  <Button mnemonicParsing="false" onAction="#editThisTeam" text="Edit this Team" />
+                  <Button mnemonicParsing="false" text="Delete this Team">
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
             </VBox>
             <ToolBar layoutX="177.0" layoutY="14.0" prefHeight="40.0" prefWidth="230.0">
               <items>
-                <Button mnemonicParsing="false" text="Home" onAction="#goHome"/>
-                  <Button mnemonicParsing="false" text="Team Screen" onAction="#goToTeamScreen"/>
-                  <Button mnemonicParsing="false" text="Close App" onAction="#closeApp"/>
+                <Button mnemonicParsing="false" onAction="#goHome" text="Home" />
+                  <Button mnemonicParsing="false" onAction="#goToTeamScreen" text="Team Screen" />
+                  <Button mnemonicParsing="false" onAction="#closeApp" text="Close App" />
               </items>
             </ToolBar>
             <DialogPane contentText="Here you can add or edit existing team" layoutX="160.0" layoutY="91.0" prefHeight="54.0" prefWidth="235.0" />
