fx id i onaction

--- a/src/main/resources/fxml/createDriverScreen.fxml
+++ b/src/main/resources/fxml/createDriverScreen.fxml
@@ -18,10 +18,10 @@
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <TextField layoutX="20.0" promptText="Driver name" />
-            <ChoiceBox layoutX="20.0" layoutY="100.0" prefWidth="150.0" />
-            <TextField layoutX="20.0" layoutY="50.0" promptText="id" />
-            <ChoiceBox layoutX="20.0" layoutY="150.0" prefWidth="150.0" />
+            <TextField layoutX="20.0" promptText="Driver name" fx:id="drivernamefield"/>
+            <ChoiceBox layoutX="20.0" layoutY="100.0" prefWidth="150.0" fx:id="teamcb" />
+            <TextField layoutX="20.0" layoutY="50.0" promptText="id" fx:id="driveridfield"/>
+            <ChoiceBox layoutX="20.0" layoutY="150.0" prefWidth="150.0" fx:id="trackcb"/>
          </children>
       </Pane>
       <HBox prefHeight="100.0" prefWidth="200.0">
@@ -35,12 +35,12 @@
       </HBox>
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <children>
-            <Button mnemonicParsing="false" text="Create">
+            <Button mnemonicParsing="false" text="Create" onAction="#create">
                <VBox.margin>
                   <Insets top="200.0" />
                </VBox.margin>
             </Button>
          </children></VBox>
-      <DialogPane contentText="Create your driver" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <DialogPane contentText="Create your driver" GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="dialogp"/>
    </children>
 </GridPane>
