--- a/src/main/resources/fxml/HomePage.fxml
+++ b/src/main/resources/fxml/HomePage.fxml
@@ -11,22 +11,22 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" onAction="#closeApp" />
+              <MenuItem mnemonicParsing="false" onAction="#closeApp" text="Close" />
             </items>
           </Menu>
 
           <Menu mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="About" onAction="#openAbout"/>
+              <MenuItem mnemonicParsing="false" onAction="#openAbout" text="About" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
-      <MenuButton layoutX="362.0" layoutY="165.0" mnemonicParsing="false" text="MenuButton">
+      <MenuButton layoutX="362.0" layoutY="165.0" mnemonicParsing="false" text="Options">
         <items>
-          <MenuItem fx:id="buttonDriver" mnemonicParsing="false" text="Drivers" onAction="#openDriverScreen"/>
-          <MenuItem fx:id="buttonTeam" mnemonicParsing="false" text="Teams" onAction="#openTeamScreen"/>
-          <MenuItem fx:id="buttonTrack" mnemonicParsing="false" text="Tracks" onAction="#openTrackScreen"/>
+          <MenuItem fx:id="buttonDriver" mnemonicParsing="false" onAction="#openDriverScreen" text="Drivers" />
+          <MenuItem fx:id="buttonTeam" mnemonicParsing="false" onAction="#openTeamScreen" text="Teams" />
+          <MenuItem fx:id="buttonTrack" mnemonicParsing="false" onAction="#openTrackScreen" text="Tracks" />
         </items>
       </MenuButton>
       <Text layoutX="52.0" layoutY="174.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Please select one of the options on the right" wrappingWidth="199.77734375">
@@ -34,7 +34,7 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <Text layoutX="209.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Main" fx:id="mainmenu" >
+      <Text fx:id="mainmenu" layoutX="209.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" Main Menu">
          <font>
             <Font size="36.0" />
          </font>
